# gscc-gestion-procesos

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.prod  alembic.ini  celerybeat-schedule  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260311_0308_beeff06d5ffb_create_users_table.py  20260311_1000_c2a8b9f1e3d0_add_extraction_tables.py  20260311_1100_a1b2c3d4e5f6_add_gin_index_on_artifacts_tags.py
backend/app/: auth.py  celery_app.py  config.py  database.py  dependencies.py  main.py  seed.py  storage.py
backend/app/models/: __init__.py
backend/app/routers/: __init__.py  artifacts.py  auth.py  executions.py  protected.py  schedules.py  users.py  workflows.py
backend/app/schemas/: __init__.py
backend/app/tasks/: __init__.py  workflow_runner.py
backend/app/workflows/: __init__.py  context.py  osm_features.py  registry.py  sample_extraction.py
frontend/: Dockerfile  Dockerfile.prod  index.html  nginx.conf  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: Layout.tsx  ParamForm.tsx  ProtectedRoute.tsx  StatusBadge.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx
frontend/src/components/shared/: EmptyState.tsx  PageHeader.tsx  StatusBadge.tsx  (+1 more)
frontend/src/contexts/: AuthContext.tsx  ToastContext.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: AdminPanel.tsx  AdminWorkflowDetail.tsx  AdminWorkflows.tsx  ArtifactBrowser.tsx  ArtifactDetail.tsx  Dashboard.tsx  ExecutionDetail.tsx  ExecutionList.tsx  Login.tsx  RunForm.tsx  ScheduleForm.tsx  ScheduleList.tsx  Unauthorized.tsx  UserManagement.tsx  WorkflowCatalog.tsx
nginx/: nginx.conf
(+5 files in other folders)
