[tool.poetry]
name = "gscc-backend"
version = "0.1.0"
description = "Worker process manager — FastAPI backend"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

# ── Web framework ──────────────────────────────────────────────────────────────
fastapi = ">=0.109.0"
uvicorn = {extras = ["standard"], version = ">=0.27.0"}
python-multipart = ">=0.0.9"

# ── Database ───────────────────────────────────────────────────────────────────
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.0"}
asyncpg = ">=0.29.0"          # async PostgreSQL driver (used by FastAPI)
psycopg2-binary = ">=2.9.9"   # sync PostgreSQL driver (used by Alembic)
alembic = ">=1.13.0"

# ── Task queue ─────────────────────────────────────────────────────────────────
celery = {extras = ["redis"], version = ">=5.3.0"}
redis = ">=5.0.0"
flower = ">=2.0.0"

# ── Auth ───────────────────────────────────────────────────────────────────────
bcrypt = "^4.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

# ── Config & validation ────────────────────────────────────────────────────────
pydantic = ">=2.6.0"
pydantic-settings = ">=2.2.0"

# ── Scheduling ─────────────────────────────────────────────────────────────────
croniter = ">=2.0.0"   # cron expression parsing for recurring schedules

# ── HTTP client ────────────────────────────────────────────────────────────────
httpx = ">=0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
httpx = ">=0.27.0"   # also used as async test client via httpx.AsyncClient

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
